chore(routing): upgrade to GraphHopper 10.2 (#498)
* feat(routing): rough upgrade to GraphHopper 10.2
* refactor(routing): make handling of encodings and parsers easier
* clean(routing): fixed code formatting
* clean(routing): added javadoc, removed priority as its not needed by now